--- a/calculator.html
+++ b/calculator.html
@@ -4,110 +4,157 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Campaign Probability Calculator</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      background: #f5f5f5;
-      margin: 0;
-      padding: 40px;
-      color: #111;
-    }
+ <style>
+  body {
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
+    background-color: #e9ecf2;
+    background-image:
+      linear-gradient(rgba(0,0,0,0.02) 1px, transparent 1px),
+      linear-gradient(90deg, rgba(0,0,0,0.02) 1px, transparent 1px);
+    background-size: 40px 40px;
+    margin: 0;
+    padding: 60px 20px;
+    color: #1a1a1a;
+  }
 
-    .container {
-      max-width: 900px;
-      margin: auto;
-      background: #fff;
-      padding: 30px;
-      border-radius: 8px;
-      box-shadow: 0 6px 18px rgba(0,0,0,0.08);
-    }
+  .container {
+    max-width: 920px;
+    margin: auto;
+    background: #f7f8fb;
+    padding: 40px;
+    border-radius: 28px;
+    box-shadow:
+      0 30px 60px rgba(0,0,0,0.08),
+      0 6px 18px rgba(0,0,0,0.04);
+  }
 
-    h1 { margin-top: 0; }
-    h2 { margin-top: 28px; }
-    h3 { margin-top: 20px; }
+  .header-bar {
+    background: linear-gradient(135deg, #2f6edc, #3d8bff);
+    color: white;
+    padding: 22px 30px;
+    border-radius: 20px;
+    font-size: 22px;
+    font-weight: 600;
+    letter-spacing: 0.4px;
+    margin-bottom: 32px;
+    box-shadow: inset 0 1px 0 rgba(255,255,255,0.25);
+  }
 
-    .panel {
-      background: #fafafa;
-      border-radius: 8px;
-      padding: 16px;
-      margin-top: 18px;
-    }
+  h2 {
+    margin-top: 0;
+    font-size: 18px;
+    font-weight: 600;
+    letter-spacing: 0.4px;
+    text-transform: uppercase;
+    opacity: 0.75;
+  }
 
-    label {
-      display: block;
-      margin-top: 14px;
-      font-weight: bold;
-    }
+  .panel {
+    background: #ffffff;
+    border-radius: 18px;
+    padding: 22px 24px;
+    margin-top: 24px;
+    box-shadow:
+      inset 0 1px 0 rgba(255,255,255,0.8),
+      0 6px 18px rgba(0,0,0,0.05);
+  }
 
-    input[type="number"], input[type="text"], input[type="password"] {
-      width: 100%;
-      padding: 8px;
-      margin-top: 6px;
-      box-sizing: border-box;
-    }
+  label {
+    font-size: 13px;
+    font-weight: 600;
+    margin-top: 14px;
+    display: block;
+    opacity: 0.85;
+  }
 
-    .row {
-      display: grid;
-      grid-template-columns: 1fr 1fr;
-      gap: 14px;
-    }
+  input[type="number"],
+  input[type="text"],
+  input[type="password"] {
+    width: 100%;
+    padding: 10px 12px;
+    margin-top: 6px;
+    border-radius: 12px;
+    border: 1px solid #d6dbe6;
+    background: #f4f6fb;
+    font-size: 14px;
+    transition: all 0.2s ease;
+  }
 
-    .toggles {
-      display: grid;
-      grid-template-columns: 1fr 1fr;
-      gap: 10px;
-      margin-top: 8px;
-    }
+  input:focus {
+    outline: none;
+    border-color: #3d8bff;
+    box-shadow: 0 0 0 3px rgba(61,139,255,0.15);
+  }
 
-    .toggle {
-      display: flex;
-      align-items: center;
-      gap: 10px;
-      padding: 10px;
-      border-radius: 8px;
-      background: #fff;
-      border: 1px solid rgba(0,0,0,0.08);
-    }
+  .row {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 18px;
+  }
 
-    .toggle input { transform: scale(1.15); }
+  .toggle {
+    background: #f4f6fb;
+    padding: 12px 14px;
+    border-radius: 14px;
+    display: flex;
+    gap: 12px;
+    align-items: flex-start;
+    box-shadow: inset 0 1px 0 rgba(255,255,255,0.7);
+  }
 
-    .hint {
-      font-size: 13px;
-      color: #444;
-      margin-top: 8px;
-      line-height: 1.35;
-    }
+  .toggle input {
+    margin-top: 3px;
+  }
 
-    button {
-      margin-top: 18px;
-      padding: 10px 16px;
-      font-size: 16px;
-      cursor: pointer;
-    }
+  .mini {
+    font-size: 12px;
+    opacity: 0.7;
+  }
 
-    .results {
-      margin-top: 22px;
-      padding: 18px;
-      background: #fafafa;
-      border-radius: 8px;
-    }
+  button {
+    margin-top: 28px;
+    padding: 12px 20px;
+    border-radius: 16px;
+    border: none;
+    background: linear-gradient(135deg, #2f6edc, #3d8bff);
+    color: white;
+    font-size: 15px;
+    font-weight: 600;
+    letter-spacing: 0.4px;
+    cursor: pointer;
+    box-shadow:
+      0 8px 20px rgba(61,139,255,0.25);
+    transition: all 0.2s ease;
+  }
 
-    .risk-safe { color: green; font-weight: bold; }
-    .risk-tight { color: orange; font-weight: bold; }
-    .risk-danger { color: red; font-weight: bold; }
+  button:hover {
+    transform: translateY(-1px);
+    box-shadow:
+      0 12px 26px rgba(61,139,255,0.35);
+  }
 
-    #loginSection {
-      max-width: 420px;
-      margin: auto;
-      background: #fff;
-      padding: 28px;
-      border-radius: 8px;
-      box-shadow: 0 6px 18px rgba(0,0,0,0.08);
-    }
+  .results {
+    margin-top: 30px;
+    background: #ffffff;
+    border-radius: 20px;
+    padding: 26px;
+    box-shadow:
+      0 20px 40px rgba(0,0,0,0.06);
+  }
 
-    .hidden { display: none; }
-    .mini { font-size: 12px; color: #555; }
-  </style>
+  .risk-safe { color: #2bb673; font-weight: 700; }
+  .risk-tight { color: #f5a623; font-weight: 700; }
+  .risk-danger { color: #e74c3c; font-weight: 700; }
+
+  .hint {
+    font-size: 12px;
+    opacity: 0.65;
+    margin-top: 10px;
+  }
+
+  .hidden { display: none; }
+</style>
+
 </head>
 <body>
 
