--- a/calculator.html
+++ b/calculator.html
@@ -170,7 +170,9 @@
 
 <div id="app" style="display:none;">
   <div class="container">
-    <h1>Campaign Probability Calculator</h1>
+    <div class="header-bar">
+  Campaign Probability & Risk Model
+</div>
 
     <div class="panel">
       <h2>Mode Controls</h2>
