--- a/field-app/index.html
+++ b/field-app/index.html
@@ -26,6 +26,7 @@
         <button id="btnSaveJson" class="btn btn-sm" type="button">Save JSON</button>
         <label class="btn btn-sm btn-ghost" for="loadJson">Load JSON</label>
         <input id="loadJson" type="file" accept="application/json" hidden />
+        <button id="btnSelfTest" class="btn btn-sm btn-ghost dev-only" type="button" title="Run internal integrity checks">Self‑Test</button>
         <span class="divider"></span>
         <label class="switch">
           <input id="toggleTraining" type="checkbox" />
@@ -901,9 +902,19 @@
       <div class="kpi-s">Includes fixed overhead in budget mode (if enabled)</div>
     </div>
     <div class="kpi">
-      <div class="kpi-k">Expected net persuasion votes</div>
+      <div class="kpi-k">Expected persuasion votes</div>
+      <div id="optPersVotes" class="kpi-v">—</div>
+      <div class="kpi-s">Deterministic: Persuasion pool attempts × (CR × SR × TR)</div>
+    </div>
+    <div class="kpi">
+      <div class="kpi-k">Expected turnout votes</div>
+      <div id="optTurnVotes" class="kpi-v">—</div>
+      <div class="kpi-s">Deterministic: GOTV pool attempts × (CR × GOTV lift × non-voter share)</div>
+    </div>
+    <div class="kpi">
+      <div class="kpi-k">Expected total net votes</div>
       <div id="optTotalVotes" class="kpi-v">—</div>
-      <div class="kpi-s">Deterministic: Attempts × (CR × SR × TR)</div>
+      <div class="kpi-s">Persuasion votes + turnout votes (Phase 6)</div>
     </div>
     <div class="kpi">
       <div class="kpi-k">Gap context</div>
@@ -934,6 +945,224 @@
     Interpretation: If diminishing returns is OFF and there are no caps, the optimal allocation can legitimately concentrate in the single best marginal tactic.
   </div>
 </div>
+
+<div class="card" data-phase="6">
+  <div class="card-head">
+    <h2>Turnout & Mobilization (Phase 6)</h2>
+  </div>
+
+  <div class="grid3">
+    <div class="field">
+      <label class="label" for="gotvBasePct">Base mobilization universe % of U</label>
+      <input id="gotvBasePct" class="input num" type="number" min="0" max="100" step="0.1" placeholder="e.g., 40" />
+      <div class="note">Strong + lean supporters you expect to mobilize (not persuade). Guardrail: Base % + Persuasion % ≤ 100.</div>
+    </div>
+
+    <div class="field">
+      <label class="label" for="gotvBaseTurnoutPct">Baseline base turnout %</label>
+      <input id="gotvBaseTurnoutPct" class="input num" type="number" min="0" max="100" step="0.1" placeholder="e.g., 62" />
+      <div class="note">Historical turnout probability among your base universe (used to cap the non-voter pool).</div>
+    </div>
+
+    <div class="field">
+      <label class="label">Mobilization ceiling (derived)</label>
+      <div class="metric">
+        <div class="metric-k">Max additional base votes</div>
+        <div id="gotvCeilingVotes" class="metric-v">—</div>
+      </div>
+      <div class="note">Ceiling = Base universe × (1 − baseline turnout). This prevents impossible GOTV math.</div>
+    </div>
+  </div>
+
+  <div class="divider-h"></div>
+
+  <div class="grid3">
+    <div class="field">
+      <label class="label">Doors (GOTV)</label>
+      <label class="switch" style="margin-top:6px;">
+        <input id="gotvDoorsEnabled" type="checkbox" />
+        <span class="slider"></span>
+        <span class="switch-label">Enable GOTV pool</span>
+      </label>
+      <div style="margin-top:8px;">
+        <label class="label" for="gotvDoorsLiftPct">Turnout lift per contact %</label>
+        <input id="gotvDoorsLiftPct" class="input input-sm num" type="number" min="0" max="100" step="0.1" placeholder="e.g., 6" />
+      </div>
+      <div class="note">Uses the same Contact rate override % you set in ROI for Doors. Lift is incremental turnout probability among remaining non-voters.</div>
+    </div>
+
+    <div class="field">
+      <label class="label">Phones (GOTV)</label>
+      <label class="switch" style="margin-top:6px;">
+        <input id="gotvPhonesEnabled" type="checkbox" />
+        <span class="slider"></span>
+        <span class="switch-label">Enable GOTV pool</span>
+      </label>
+      <div style="margin-top:8px;">
+        <label class="label" for="gotvPhonesLiftPct">Turnout lift per contact %</label>
+        <input id="gotvPhonesLiftPct" class="input input-sm num" type="number" min="0" max="100" step="0.1" placeholder="e.g., 3" />
+      </div>
+      <div class="note">Uses the same Contact rate override % you set in ROI for Phones.</div>
+    </div>
+
+    <div class="field">
+      <label class="label">Texts (GOTV)</label>
+      <label class="switch" style="margin-top:6px;">
+        <input id="gotvTextsEnabled" type="checkbox" />
+        <span class="slider"></span>
+        <span class="switch-label">Enable GOTV pool</span>
+      </label>
+      <div style="margin-top:8px;">
+        <label class="label" for="gotvTextsLiftPct">Turnout lift per contact %</label>
+        <input id="gotvTextsLiftPct" class="input input-sm num" type="number" min="0" max="100" step="0.1" placeholder="e.g., 1.5" />
+      </div>
+      <div class="note">Texts often have lower mobilization lift. Enable only if you have evidence or a disciplined program.</div>
+    </div>
+  </div>
+
+  <div id="gotvBanner" class="banner warn" hidden></div>
+</div>
+
+
+
+<div class="card" data-phase="7">
+  <div class="card-head">
+    <h2>Timeline & pacing (Phase 7)</h2>
+  </div>
+
+  <div class="grid3">
+    <div class="field">
+      <label class="label">Enable timeline modeling</label>
+      <label class="switch" style="margin-top:6px;">
+        <input id="tlEnabled" type="checkbox" />
+        <span class="slider"></span>
+        <span class="switch-label">On</span>
+      </label>
+      <div class="note">Phase 7 does not change total votes. It sequences when expected votes materialize.</div>
+    </div>
+
+    <div class="field">
+      <label class="label" for="tlPersCompression">Persuasion efficiency after early-vote cutoff</label>
+      <input id="tlPersCompression" class="input num" type="number" min="0.1" max="1" step="0.05" placeholder="0.60" />
+      <div class="note">Default 0.60. After the early-vote window, persuasion yield is discounted (fewer voters remain persuadable).</div>
+    </div>
+
+    <div class="field">
+      <label class="label">Cutoff & risk (derived)</label>
+      <div class="metric">
+        <div class="metric-k">Early-vote cutoff week</div>
+        <div id="tlCutoff" class="metric-v">—</div>
+      </div>
+      <div class="note">Derived from Weeks remaining and Early vote % (Expected).</div>
+    </div>
+  </div>
+
+  <div class="divider-h"></div>
+
+  <div class="kpis">
+    <div class="kpi">
+      <div class="kpi-k">Week goal reached</div>
+      <div id="tlGoalWeek" class="kpi-v">—</div>
+      <div class="kpi-s">Earliest week cumulative expected votes ≥ persuasion need (Expected).</div>
+    </div>
+    <div class="kpi">
+      <div class="kpi-k">Persuasion scheduled after cutoff</div>
+      <div id="tlPersAfter" class="kpi-v">—</div>
+      <div class="kpi-s">Higher = more late persuasion risk in early-vote environments.</div>
+    </div>
+  </div>
+
+  <div id="tlBanner" class="banner warn" hidden></div>
+
+  <div class="table-wrap" style="margin-top:10px;">
+    <table class="table" aria-label="Timeline table">
+      <thead>
+        <tr>
+          <th>Week</th>
+          <th class="num">Attempts</th>
+          <th class="num">Persuasion votes</th>
+          <th class="num">Turnout votes</th>
+          <th class="num">Total</th>
+          <th class="num">Cumulative</th>
+        </tr>
+      </thead>
+      <tbody id="tlTbody">
+        <tr><td class="muted">—</td><td class="num muted">—</td><td class="num muted">—</td><td class="num muted">—</td><td class="num muted">—</td><td class="num muted">—</td></tr>
+      </tbody>
+    </table>
+  </div>
+
+  <div class="note">Defaults: persuasion is front-loaded by early-vote cutoff; GOTV is ramped late (80% in the final 3 weeks when W &gt; 3).</div>
+</div>
+
+
+<div class="card" data-phase="8">
+  <div class="card-head">
+    <h2>Hiring & resource intelligence (Phase 8)</h2>
+    <div class="card-actions">
+      <button id="hireSim" class="btn btn-sm" type="button">Simulate hiring</button>
+    </div>
+  </div>
+
+  <div class="grid3">
+    <div class="field">
+      <label class="label" for="hireWeeklyCost">Organizer weekly cost ($)</label>
+      <input id="hireWeeklyCost" class="input num" type="number" min="0" step="1" placeholder="e.g., 1200" />
+      <div class="note">Flat weekly burn. Use fully-loaded cost if possible (salary + taxes + overhead allocation).</div>
+    </div>
+
+    <div class="field">
+      <label class="label" for="hireWeek">Hire week (start)</label>
+      <input id="hireWeek" class="input num" type="number" min="1" step="1" placeholder="1" />
+      <div class="note">Week number the organizer starts contributing production.</div>
+    </div>
+
+    <div class="field">
+      <label class="label" for="hireEndWeek">End week</label>
+      <input id="hireEndWeek" class="input num" type="number" min="1" step="1" placeholder="auto (W)" />
+      <div class="note">If blank, assumes through Election Week.</div>
+    </div>
+  </div>
+
+  <div class="divider-h"></div>
+
+  <div class="table-wrap">
+    <table class="table" aria-label="Hiring simulation table">
+      <thead>
+        <tr>
+          <th>Added organizers</th>
+          <th class="num">Δ Votes</th>
+          <th class="num">Cost</th>
+          <th class="num">Marginal $/vote</th>
+          <th>Efficient vs paid?</th>
+          <th class="num">Week goal reached</th>
+        </tr>
+      </thead>
+      <tbody id="hireTbody">
+        <tr><td class="muted">—</td><td class="num muted">—</td><td class="num muted">—</td><td class="num muted">—</td><td class="muted">—</td><td class="num muted">—</td></tr>
+      </tbody>
+    </table>
+  </div>
+
+  <div id="hireBanner" class="banner warn" hidden></div>
+
+  <div class="note">This simulation adds capacity only (attempts). It does not assume higher persuasion skill or better targeting from more staff.</div>
+</div>
+
+
+<div id="selfTestCard" class="card dev-only" hidden>
+  <div class="card-head">
+    <h2>Integrity self-test</h2>
+    <div class="card-actions">
+      <span id="selfTestStatus" class="chip">Idle</span>
+    </div>
+  </div>
+  <div id="selfTestSummary" class="banner" hidden></div>
+  <ul id="selfTestList" class="validation" style="margin-top:10px;"></ul>
+  <div class="note">Dev-only. Enables deterministic regression checks so future UI-only changes don’t drift Phase 1–8 logic.</div>
+</div>
+
+
 
       </section>
 
