--- a/field-app/index.html
+++ b/field-app/index.html
@@ -26,6 +26,7 @@
         <button id="btnSaveJson" class="btn btn-sm" type="button">Save JSON</button>
         <label class="btn btn-sm btn-ghost" for="loadJson">Load JSON</label>
         <input id="loadJson" type="file" accept="application/json" hidden />
+        <button id="btnResetAll" class="btn btn-sm btn-ghost" type="button" title="Reset all fields">Reset</button>
         <span class="divider"></span>
         <label class="switch">
           <input id="toggleTraining" type="checkbox" />
